style.css
/*  Variables */
:root {
    /* Main Colors */

    --primary-color: #051633;
    --secondary-color: #3C3C3C;
    --tertiary-color: #B4B4B4;
    --quaternary-color: #E5E5E5;

    --navbar-bg: #12101d;

    --canvas-bg: #051633;

    --theme-base: white;

    --nav-color: #E5E5E5;
    --nav-hover: #E5E5E5;

    --particle-color: #E5E5E5;

}

#particleCanvas {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: -2;
    pointer-events: none;
    background-color: var(--canvas-bg);
    /* filter: invert(1); */
}


/* Global Styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Capriola", sans-serif;
    text-decoration: none;
    /* color: white; */
}



body {
    background-color: transparent;
    color: white;
    line-height: 1.6;
    cursor: none;
    overflow: scroll;
    scroll-behavior: smooth;
}

h1,
h2,
h3,
h4 {
    font-family: "Capriola", sans-serif;
}


.theme-change {
    position: fixed;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 0px;
    height: 0px;
    clip-path: circle(0%);
    z-index: 998;
    opacity: 1;
    visibility: visible;
    transition: width 1s ease-in-out, height 1s ease-in-out, clip-path 1s ease-in-out, opacity 0.5s ease-in-out 0.5s, visibility 0s ease 1s;
    pointer-events: none;
}

.theme-change.active,
.theme-change.active2 {
    width: 200vw;
    height: 200vw;
    clip-path: circle(100% at 50% 0);
    opacity: 0;
}

.theme-change.active {
    background-color: #ffdf5f;
}

.theme-change.active2 {
    background-color: #12101d;
}


.stage {
    width: 220px;
    height: 160px;
    gap: 25px;
    position: fixed;
    display: flex;
    /* margin: 20px; */
    /* perspective: 1200px; */
    perspective-origin: 50% 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-60px);
    background-color: var(--quaternary-color);
    border-radius: 50px;
    justify-content: center;
    align-items: end;
    border: 5px solid rgb(0, 0, 0);
    z-index: 999;
}

.eye {
    /* display: inline-block; */
    width: 75px;
    height: 75px;
    margin: 0;
    margin-bottom: 10px;
    border-radius: 50%;
    position: relative;
    background: radial-gradient(circle at 50% 40%, #fcfcfc, rgb(255, 228, 228) 66%, rgb(255, 228, 228) 100%);
    border: 3px solid black;
}

.eye:after {
    content: "";
    position: absolute;
    top: 5%;
    left: 10%;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8) 14%, rgba(255, 255, 255, 0) 24%);
    transform: translateX(-17px) translateY(-20px) skewX(-20deg);
}

.brow-one,
.brow-two {
    position: absolute;
    top: -5%;
    left: -10%;
    width: 120%;
    height: 25%;
    background-color: rgb(64, 33, 33);
    z-index: 2;
    border-radius: 10px;
    border: 3px solid black;
    transform-origin: center bottom;
    /* Rotate from the bottom center */
    transition: transform 0.2s ease-out;
    /* Smooth rotation */
}

.iris {
    width: 40%;
    height: 40%;
    margin: 30%;
    border-radius: 50%;
    background: radial-gradient(circle at 50% 50%, rgb(74, 31, 31) 5%, rgb(64, 33, 33) 100%);
    position: absolute;
    transition: transform 0.3s ease-out;
    z-index: 1;
    /* animation: move-eye-skew 5s ease-out infinite; */
}

.iris:before {
    content: "";
    display: block;
    position: absolute;
    width: 37.5%;
    height: 37.5%;
    border-radius: 50%;
    top: 31.25%;
    left: 31.25%;
    background: black;
}

.iris:after {
    content: "";
    display: block;
    position: absolute;
    width: 31.25%;
    height: 31.25%;
    border-radius: 50%;
    top: 18.75%;
    left: 18.75%;
    background: rgba(255, 255, 255, 0.2);
}




.stage-2 {
    width: 110px;
    height: 110px;
    background-color: var(--navbar-bg);
    border-radius: 0px 0px 0px 25px;
    border-left: 3px solid var(--theme-base);
    border-bottom: 3px solid var(--theme-base);
    z-index: 500;

    position: fixed;
    right: 0px;

    animation: fade-slide-left 1s cubic-bezier(0.65, 0, 0.35, 1) forwards;
}


@keyframes fade-slide-left {
    0% {
        opacity: 0;
        transform: translateX(10rem);
        visibility: hidden;
    }

    100% {
        opacity: 1;
        transform: none;
        visibility: visible;
        /* Make it visible once animation completes */
    }
}

.status {
    width: 80px;
    height: 80px;
    margin: 15px;
    background-color: transparent;
    position: absolute;
    left: auto;
    /* right: 50px; */
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
}

.status.active {
    filter: invert(1);
}

.shape {
    width: 45px;
    height: 45px;
    margin: 32.5px;
    background: var(--theme-base);
    /* filter: drop-shadow(0 0 5px rgb(72, 16, 255)); */
    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
    position: absolute;
    left: auto;
    /* right: 52.5px; */
    animation: change-polygon 5s ease-in-out infinite;
}

@keyframes change-polygon {
    0% {
        /* Initial triangle */
        clip-path: polygon(50% 0%, 50% 0%, 100% 100%, 100% 100%, 0% 100%, 0% 100%);
    }

    33% {
        /* Square */
        clip-path: polygon(100% 100%, 0% 100%, 0% 100%, 0% 0%, 100% 0%, 100% 100%);
    }

    67% {
        /* Pentagon */
        clip-path: polygon(50% 0%, 50% 0%, 100% 40%, 80% 100%, 20% 100%, 0% 40%);
    }

    100% {
        /* Final triangle */
        clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 50% 0%, 50% 0%, 0% 100%);
    }

}
/* ... */

